--- a/index.html
+++ b/index.html
@@ -12,43 +12,42 @@
     <style>
         :root { --gold: #d4af37; --bg: #050505; --card: #121212; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none !important; }
-        html, body { height: 100%; margin: 0; background: var(--bg); color: #e2e8f0; overflow-x: hidden; }
+        html, body { height: 100%; margin: 0; background: var(--bg); color: #e2e8f0; overflow: hidden; }
         body { font-family: 'Plus Jakarta Sans', sans-serif; display: flex; flex-direction: column; }
         
-        /* LOGIN PREMIUM */
+        /* LOGIN */
         #login-screen { position: fixed; inset: 0; background: black; z-index: 2000; display: flex; align-items: center; justify-content: center; }
-        .login-card { width: 85%; max-width: 330px; text-align: center; background: #111; padding: 40px 30px; border-radius: 25px; border: 1px solid #222; }
+        .login-card { width: 85%; max-width: 320px; text-align: center; background: #111; padding: 40px 30px; border-radius: 25px; border: 1px solid #222; }
         .login-card input { width: 100%; padding: 15px; margin-bottom: 25px; background: #222; border: 1px solid var(--gold); color: white; border-radius: 12px; text-align: center; font-size: 16px; }
-        .btn-gold-tico { display: block !important; width: 100% !important; background: linear-gradient(145deg, #d4af37, #b8962d) !important; color: black !important; border: none !important; padding: 18px !important; border-radius: 50px !important; font-weight: 800; text-transform: uppercase; cursor: pointer; }
+        .btn-gold-premium { display: block !important; width: 100% !important; background: linear-gradient(145deg, #d4af37, #b8962d) !important; color: black !important; border: none !important; padding: 18px !important; border-radius: 50px !important; font-weight: 800; text-transform: uppercase; cursor: pointer; }
 
         header { background: rgba(0,0,0,0.98); padding: 12px 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #222; z-index: 100; }
-        .header-logo { width: 38px; height: 38px; border-radius: 8px; }
-        .brand-title { color: var(--gold); font-family: 'Playfair Display', serif; font-size: 12px; text-transform: uppercase; }
-        .btn-exit { background: transparent; border: 1.5px solid var(--gold); color: white; font-size: 10px; padding: 6px 12px; border-radius: 6px; font-weight: 800; cursor: pointer; }
+        .header-logo { width: 35px; height: 35px; border-radius: 8px; }
+        .brand-title { color: var(--gold); font-family: 'Playfair Display', serif; font-size: 11px; text-transform: uppercase; }
 
         #app-content { flex: 1; overflow-y: auto; padding-bottom: 280px; }
         .container { max-width: 550px; margin: auto; padding: 15px; }
 
-        /* CATEGORÍAS COMPACTAS V11.1 */
-        .channels-container { display: flex; gap: 12px; margin-bottom: 20px; overflow-x: auto; padding: 10px 5px; scrollbar-width: none; }
-        .channel-item { text-align: center; opacity: 0.5; transition: 0.3s; min-width: 70px; cursor: pointer; }
+        /* CATEGORÍAS AJUSTADAS V11.2 */
+        .channels-container { display: flex; gap: 10px; margin-bottom: 20px; overflow-x: auto; padding: 10px 5px; scrollbar-width: none; }
+        .channel-item { text-align: center; opacity: 0.5; transition: 0.3s; min-width: 65px; cursor: pointer; }
         .channel-item.active { opacity: 1; transform: scale(1.02); }
-        .channel-logo { width: 62px; height: 62px; border-radius: 10px; border: 2px solid #333; margin-bottom: 6px; background: #000; object-fit: contain; padding: 3px; }
-        .active .channel-logo { border-color: var(--gold); box-shadow: 0 0 12px rgba(212,175,55,0.4); }
-        .channel-name { font-size: 8.5px; color: #999; font-weight: 800; text-transform: uppercase; display: block; }
+        .channel-logo { width: 56px; height: 56px; border-radius: 10px; border: 2px solid #333; margin-bottom: 6px; background: #000; object-fit: contain; padding: 3px; }
+        .active .channel-logo { border-color: var(--gold); box-shadow: 0 0 10px rgba(212,175,55,0.4); }
+        .channel-name { font-size: 8px; color: #999; font-weight: 800; text-transform: uppercase; display: block; }
 
         /* TARJETAS */
-        .episode-card { background: var(--card); border-radius: 20px; margin-bottom: 30px; overflow: hidden; border: 1px solid #222; position: relative; }
+        .episode-card { background: var(--card); border-radius: 20px; margin-bottom: 30px; border: 1px solid #222; position: relative; overflow: hidden; }
         .cover-art { width: 100%; height: 210px; background-size: cover; background-position: center; position: relative; }
         .cover-overlay { position: absolute; inset: 0; background: rgba(0,0,0,0.3); display: flex; align-items: center; justify-content: center; }
         .btn-play-card { background: var(--gold); border: none; width: 65px; height: 65px; border-radius: 50%; cursor: pointer; display: flex; align-items: center; justify-content: center; }
         .btn-play-card::before { content: '▶'; font-size: 26px; color: black; margin-left: 5px; }
-        .is-playing .btn-play-card { background: rgba(0,0,0,0.85) !important; border: 2.5px solid var(--gold); }
-        .is-playing .btn-play-card::before { content: '||'; font-family: Arial, sans-serif; font-weight: bold; color: var(--gold); margin-left: 0; }
+        .is-playing .btn-play-card { background: rgba(0,0,0,0.8) !important; border: 2.5px solid var(--gold); }
+        .is-playing .btn-play-card::before { content: '||'; font-family: Arial; font-weight: bold; color: var(--gold); margin-left: 0; }
 
         .episode-info { padding: 20px; }
-        .program-tag { display: inline-block; font-size: 8.5px; color: black; padding: 4px 12px; border-radius: 50px; background: var(--gold); font-weight: 800; margin-bottom: 10px; }
-        .episode-title { font-size: 19px; margin: 0; font-weight: 700; color: white; line-height: 1.2; }
+        .program-tag { display: inline-block; font-size: 8px; color: black; padding: 4px 12px; border-radius: 50px; background: var(--gold); font-weight: 800; margin-bottom: 10px; }
+        .episode-title { font-size: 18px; font-weight: 700; color: white; line-height: 1.2; }
 
         /* REPRODUCTOR */
         #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 2px solid var(--gold); padding: 15px 20px; display: none; z-index: 1000; }
@@ -57,15 +56,14 @@
         .playing .p-vinyl { animation-play-state: running; }
         .p-info { flex: 1; overflow: hidden; }
         .p-info h4 { margin: 0; font-size: 13px; color: #fff; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-        .p-time { font-size: 10px; color: var(--gold); font-weight: 900; margin-top: 4px; }
+        .p-time { font-size: 10px; color: var(--gold); font-weight: 900; }
 
         .btn-p-main { background: none; border: none; color: var(--gold); font-size: 30px; cursor: pointer; }
-        .seek-container { width: 100%; padding: 5px 0; }
         #seek-bar { width: 100%; -webkit-appearance: none; background: #222; height: 5px; border-radius: 3px; }
         #seek-bar::-webkit-slider-thumb { -webkit-appearance: none; width: 18px; height: 18px; background: var(--gold); border-radius: 50%; border: 2px solid #000; }
 
-        .tool-row { display: flex; justify-content: space-between; align-items: center; border-top: 1px solid #222; padding-top: 12px; margin-top: 5px; gap: 8px; }
-        .btn-tool { flex: 1; background: #1a1a1a; border: 1px solid #333; color: #fff; padding: 9px 5px; border-radius: 8px; font-size: 8.5px; font-weight: 800; cursor: pointer; transition: 0.2s; }
+        .tool-row { display: flex; justify-content: space-between; align-items: center; border-top: 1px solid #222; padding-top: 12px; margin-top: 5px; gap: 6px; }
+        .btn-tool { flex: 1; background: #1a1a1a; border: 1px solid #333; color: #fff; padding: 9px 2px; border-radius: 8px; font-size: 8px; font-weight: 800; cursor: pointer; }
         .is-casting { background: var(--gold) !important; color: black !important; }
 
         @keyframes rotateVinyl { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
@@ -77,9 +75,9 @@
 <div id="login-screen">
     <div class="login-card">
         <img src="logo.png" style="width:90px; margin-bottom:20px;">
-        <h2 style="color:var(--gold); font-family:'Playfair Display'; margin-bottom: 25px;">JAZZTABUENO</h2>
+        <h2 style="color:var(--gold); font-family:'Playfair Display';">JAZZTABUENO</h2>
         <input type="password" id="passInput" placeholder="Clave">
-        <button onclick="checkLogin()" class="btn-gold-tico">ENTRAR ▶</button>
+        <button onclick="checkLogin()" class="btn-gold-premium">ENTRAR ▶</button>
     </div>
 </div>
 
@@ -89,7 +87,7 @@
             <img src="logo.png" class="header-logo">
             <div class="brand-title">Jazztabueno<br>Productions</div>
         </div>
-        <button onclick="window.resetTotal()" class="btn-exit">SALIR</button>
+        <button onclick="window.resetTotal()" class="btn-gold-premium" style="font-size: 9px; padding: 6px 12px; width: auto !important;">SALIR</button>
     </header>
 
     <div class="container">
@@ -116,9 +114,9 @@
     </div>
     <div class="seek-container"><input type="range" id="seek-bar" value="0" min="0" step="1"></div>
     <div class="tool-row">
-        <button id="cast-btn-v11" onclick="window.activarCastV11()" class="btn-tool" style="border-color: var(--gold); color: var(--gold);">📡 CONECTAR TV</button>
+        <button id="cast-btn-v112" onclick="window.activarCastV112()" class="btn-tool" style="border-color: var(--gold); color: var(--gold);">📡 CONECTAR TV</button>
         <button onclick="window.refreshVisuals()" class="btn-tool" style="border-color: #00ff00; color: #00ff00;">🖼️ REFRESCAR TV</button>
-        <button onclick="window.reiniciarSesion()" class="btn-tool" style="border-color: #ff4444; color: #ff4444;">♻️ RESET UI</button>
+        <button onclick="window.resetUI()" class="btn-tool" style="border-color: #ff4444; color: #ff4444;">♻️ RESET UI</button>
     </div>
 </div>
 
@@ -129,7 +127,7 @@
     const media = document.getElementById('main-media');
     const seekBar = document.getElementById('seek-bar');
     const timeDisplay = document.getElementById('p-time-display');
-    const castBtn = document.getElementById('cast-btn-v11');
+    const castBtn = document.getElementById('cast-btn-v112');
     let programas = []; let idActual = null; let filtroActivo = 'Todo';
 
     window.checkLogin = () => {
@@ -167,13 +165,12 @@
         });
     }
 
-    function pushToCast(titulo, prog, img) {
+    function syncCast(titulo, prog, img) {
         if ('mediaSession' in navigator) {
             navigator.mediaSession.metadata = new MediaMetadata({
                 title: titulo, artist: prog, album: 'Jazztabueno Productions',
-                artwork: [{ src: img, sizes: '512x512', type: 'image/png' }, { src: img, sizes: '1024x1024', type: 'image/png' }]
+                artwork: [{ src: img, sizes: '512x512', type: 'image/png' }]
             });
-            navigator.mediaSession.playbackState = media.paused ? 'paused' : 'playing';
         }
     }
 
@@ -181,54 +178,56 @@
         if (idActual === id) { window.togglePlay(); } 
         else {
             idActual = id; 
-            const artworkUrl = img || 'logo.png';
-            document.getElementById('p-title').innerText = titulo;
-            document.getElementById('p-vinyl').style.backgroundImage = `url('${artworkUrl}')`;
-            document.getElementById('global-player').style.display = 'block';
             media.src = url; 
-            media.setAttribute('poster', artworkUrl);
-            pushToCast(titulo, prog, artworkUrl);
-            media.play().then(() => {
-                setTimeout(() => pushToCast(titulo, prog, artworkUrl), 2000);
-            });
+            media.setAttribute('poster', img || 'logo.png');
+            document.getElementById('p-title').innerText = titulo;
+            document.getElementById('p-vinyl').style.backgroundImage = `url('${img || 'logo.png'}')`;
+            document.getElementById('global-player').style.display = 'block';
+            syncCast(titulo, prog, img || 'logo.png');
+            media.play();
         }
         render();
     };
 
     window.togglePlay = () => { if (media.paused) media.play(); else media.pause(); render(); };
     
-    window.activarCastV11 = () => { 
+    // --- FUNCIÓN DE TRANSMISIÓN REFORZADA V11.2 ---
+    window.activarCastV112 = () => { 
         if(media.remotePlayback) {
-            media.remotePlayback.prompt().then(() => { castBtn.classList.add('is-casting'); }).catch(() => {});
+            // Un pequeño delay para asegurar que el navegador registre el clic
+            setTimeout(() => {
+                media.remotePlayback.prompt().then(() => {
+                    console.log("Menú abierto");
+                }).catch(() => {
+                    alert("📡 Director: Chrome no abre el menú. Intenta darle Play primero y luego presiona este botón.");
+                });
+            }, 50);
         }
     };
 
     window.refreshVisuals = () => {
         if(idActual) {
             const p = programas.find(x => x.id === idActual);
-            if(p) pushToCast(p.titulo, p.programa, p.imagenUrl);
-            alert("📡 Refrescando imagen en TV...");
+            if(p) syncCast(p.titulo, p.programa, p.imagenUrl);
+            alert("📡 Refrescando carátula...");
         }
     };
 
-    // BOTÓN DE EMERGENCIA PARA EL ICONO OSCURO
-    window.reiniciarSesion = () => {
+    window.resetUI = () => {
         castBtn.classList.remove('is-casting');
-        media.pause();
-        media.src = "";
-        alert("♻️ Interfaz Reiniciada. Si el icono seguía oscuro, debería haberse limpiado.");
-        render();
+        media.pause(); media.src = ""; render();
+        alert("♻️ Interfaz Limpia.");
     };
 
     setInterval(() => {
         if (media.remotePlayback && media.remotePlayback.state === 'connected') {
             castBtn.classList.add('is-casting');
-            castBtn.innerText = "📡 TV CONECTADA";
+            castBtn.innerText = "📡 CONECTADO";
         } else {
             castBtn.classList.remove('is-casting');
             castBtn.innerText = "📡 CONECTAR TV";
         }
-    }, 2500);
+    }, 2000);
 
     window.filtrar = (cat, el) => {
         filtroActivo = cat;
@@ -238,9 +237,6 @@
     };
 
     window.resetTotal = () => { localStorage.clear(); location.reload(); };
-    window.cambiarVelocidad = () => { const speeds = [1.0, 1.25, 1.5, 2.0]; media.playbackRate = speeds[(speeds.indexOf(media.playbackRate) + 1) % speeds.length]; document.getElementById('btn-speed').innerText = media.playbackRate + "x"; };
-    window.toggleMute = () => { media.muted = !media.muted; document.getElementById('btn-mute').innerText = media.muted ? "🔇 MUTE" : "🔊 VOL"; };
-
     media.onloadedmetadata = () => { seekBar.max = Math.floor(media.duration); };
     media.onplay = () => { document.getElementById('global-player').classList.add('playing'); document.getElementById('p-play-btn').innerText = '||'; render(); };
     media.onpause = () => { document.getElementById('global-player').classList.remove('playing'); document.getElementById('p-play-btn').innerText = '▶'; render(); };
