--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
         #login-screen { position: fixed; inset: 0; background: black; z-index: 2000; display: flex; align-items: center; justify-content: center; }
         .login-card { width: 85%; max-width: 320px; text-align: center; background: #111; padding: 40px 30px; border-radius: 25px; border: 1px solid #222; }
         .login-card input { width: 100%; padding: 15px; margin-bottom: 25px; background: #222; border: 1px solid var(--gold); color: white; border-radius: 12px; text-align: center; font-size: 16px; }
-        .btn-gold-premium { display: block !important; width: 100% !important; background: linear-gradient(145deg, #d4af37, #b8962d) !important; color: black !important; border: none !important; padding: 18px !important; border-radius: 50px !important; font-weight: 800; text-transform: uppercase; cursor: pointer; }
+        .btn-gold-tico { display: block !important; width: 100% !important; background: linear-gradient(145deg, #d4af37, #b8962d) !important; color: black !important; border: none !important; padding: 18px !important; border-radius: 50px !important; font-weight: 800; text-transform: uppercase; cursor: pointer; }
 
         header { background: rgba(0,0,0,0.98); padding: 12px 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #222; z-index: 100; }
         .header-logo { width: 35px; height: 35px; border-radius: 8px; }
         .brand-title { color: var(--gold); font-family: 'Playfair Display', serif; font-size: 11px; text-transform: uppercase; }
+        .btn-salir-oficial { background: transparent; border: 1.5px solid var(--gold); color: var(--gold); padding: 8px 16px; border-radius: 8px; font-size: 10px; font-weight: 800; cursor: pointer; text-transform: uppercase; }
 
         #app-content { flex: 1; overflow-y: auto; padding-bottom: 280px; }
         .container { max-width: 550px; margin: auto; padding: 15px; }
 
-        /* --- CATEGORÍAS V11.3 (MÁS ESPACIO PARA OSR) --- */
-        .channels-container { display: flex; gap: 12px; margin-bottom: 20px; overflow-x: auto; padding: 10px 25px 10px 5px; scrollbar-width: none; -webkit-overflow-scrolling: touch; }
-        .channel-item { text-align: center; opacity: 0.5; transition: 0.3s; min-width: 68px; cursor: pointer; }
+        /* CATEGORÍAS V11.4 - SIN RECORTES */
+        .channels-container { display: flex; gap: 12px; margin-bottom: 25px; overflow-x: auto; padding: 10px 50px 10px 10px; scrollbar-width: none; -webkit-overflow-scrolling: touch; }
+        .channel-item { text-align: center; opacity: 0.5; transition: 0.3s; min-width: 70px; cursor: pointer; }
         .channel-item.active { opacity: 1; transform: scale(1.05); }
-        .channel-logo { width: 60px; height: 60px; border-radius: 10px; border: 2px solid #333; margin-bottom: 6px; background: #000; object-fit: contain; padding: 2px; }
+        .channel-logo { width: 62px; height: 62px; border-radius: 12px; border: 2px solid #333; margin-bottom: 8px; background: #000; object-fit: contain; padding: 4px; }
         .active .channel-logo { border-color: var(--gold); box-shadow: 0 0 10px rgba(212,175,55,0.4); }
         .channel-name { font-size: 8px; color: #999; font-weight: 800; text-transform: uppercase; display: block; }
 
@@ -45,8 +46,12 @@
         .is-playing .btn-play-card { background: rgba(0,0,0,0.85) !important; border: 2.5px solid var(--gold); }
         .is-playing .btn-play-card::before { content: '||'; font-family: Arial; font-weight: bold; color: var(--gold); margin-left: 0; }
 
+        .episode-info { padding: 20px; }
+        .program-tag { display: inline-block; font-size: 8px; color: black; padding: 4px 12px; border-radius: 50px; background: var(--gold); font-weight: 800; margin-bottom: 10px; }
+        .episode-title { font-size: 18px; font-weight: 700; color: white; line-height: 1.2; }
+
         /* REPRODUCTOR */
-        #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 2px solid var(--gold); padding: 15px 20px; display: none; z-index: 1000; }
+        #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 2px solid var(--gold); padding: 15px 20px; display: none; z-index: 1000; box-shadow: 0 -20px 40px rgba(0,0,0,1); }
         .player-top { display: flex; align-items: center; gap: 12px; margin-bottom: 12px; }
         .p-vinyl { width: 50px; height: 50px; border-radius: 50%; border: 2px solid var(--gold); background-size: cover; animation: rotateVinyl 4s linear infinite; animation-play-state: paused; }
         .playing .p-vinyl { animation-play-state: running; }
@@ -59,13 +64,12 @@
         #seek-bar::-webkit-slider-thumb { -webkit-appearance: none; width: 18px; height: 18px; background: var(--gold); border-radius: 50%; border: 2px solid #000; }
 
         .tool-row { display: flex; justify-content: space-between; align-items: center; border-top: 1px solid #222; padding-top: 12px; margin-top: 5px; gap: 6px; }
-        .btn-tool { flex: 1; background: #1a1a1a; border: 1px solid #333; color: #fff; padding: 10px 5px; border-radius: 8px; font-size: 8px; font-weight: 800; cursor: pointer; transition: 0.2s; }
-        
-        /* ESTADO ACTIVO TRANSMISIÓN (Dorado Vibrante) */
-        .is-casting { background: var(--gold) !important; color: black !important; box-shadow: 0 0 10px var(--gold); }
+        .btn-tool { flex: 1; background: #1a1a1a; border: 1px solid #333; color: #fff; padding: 10px 5px; border-radius: 8px; font-size: 8.5px; font-weight: 800; cursor: pointer; transition: 0.2s; }
+        .is-casting { background: var(--gold) !important; color: black !important; }
 
         @keyframes rotateVinyl { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
-        #main-media { width: 1px; height: 1px; opacity: 0; pointer-events: none; }
+        /* El reproductor nativo oculto pero funcional */
+        #main-media { width: 100%; height: 40px; margin-top: 10px; display: none; filter: invert(1); }
     </style>
 </head>
 <body>
@@ -75,7 +79,7 @@
         <img src="logo.png" style="width:90px; margin-bottom:20px;">
         <h2 style="color:var(--gold); font-family:'Playfair Display';">JAZZTABUENO</h2>
         <input type="password" id="passInput" placeholder="Clave">
-        <button onclick="checkLogin()" class="btn-gold-premium">ENTRAR ▶</button>
+        <button onclick="checkLogin()" class="btn-gold-tico">ENTRAR ▶</button>
     </div>
 </div>
 
@@ -85,7 +89,7 @@
             <img src="logo.png" class="header-logo">
             <div class="brand-title">Jazztabueno<br>Productions</div>
         </div>
-        <button onclick="window.resetTotal()" class="btn-gold-premium" style="font-size: 9px; padding: 6px 12px; width: auto !important;">SALIR</button>
+        <button onclick="window.resetApp()" class="btn-salir-oficial">SALIR</button>
     </header>
 
     <div class="container">
@@ -101,7 +105,7 @@
 </div>
 
 <div id="global-player">
-    <video id="main-media" playsinline crossorigin="anonymous"></video>
+    <video id="main-media" controls playsinline crossorigin="anonymous"></video>
     <div class="player-top">
         <div id="p-vinyl" class="p-vinyl" style="background-image: url('logo.png');"></div>
         <div class="p-info"><h4 id="p-title">...</h4><div id="p-time-display" class="p-time">00:00 / 00:00</div></div>
@@ -112,9 +116,9 @@
     </div>
     <div class="seek-container"><input type="range" id="seek-bar" value="0" min="0" step="1"></div>
     <div class="tool-row">
-        <button id="btn-cast-v113" onclick="window.activarCastV113()" class="btn-tool" style="border-color: var(--gold); color: var(--gold);">📡 TRANSMITIR TV</button>
-        <button onclick="window.refreshVisuals()" class="btn-tool" style="border-color: #00ff00; color: #00ff00;">🖼️ REFRESCAR TV</button>
-        <button onclick="window.resetUI()" class="btn-tool" style="border-color: #ff4444; color: #ff4444;">♻️ RESET UI</button>
+        <button id="cast-btn-final" onclick="window.activarCastFinal()" class="btn-tool" style="border-color: var(--gold); color: var(--gold);">📡 TRANSMITIR A TV</button>
+        <button onclick="window.forzarArte()" class="btn-tool" style="border-color: #00ff00; color: #00ff00;">🖼️ REFRESCAR TV</button>
+        <button onclick="window.resetUI()" class="btn-tool" style="border-color: #ff4444; color: #ff4444;">♻️ RESET ICONO</button>
     </div>
 </div>
 
@@ -125,7 +129,7 @@
     const media = document.getElementById('main-media');
     const seekBar = document.getElementById('seek-bar');
     const timeDisplay = document.getElementById('p-time-display');
-    const castBtn = document.getElementById('btn-cast-v113');
+    const castBtn = document.getElementById('cast-btn-final');
     let programas = []; let idActual = null; let filtroActivo = 'Todo';
 
     window.checkLogin = () => {
@@ -163,13 +167,12 @@
         });
     }
 
-    function syncMetadata(titulo, prog, img) {
+    function pushMetadata(titulo, prog, img) {
         if ('mediaSession' in navigator) {
             navigator.mediaSession.metadata = new MediaMetadata({
                 title: titulo, artist: prog, album: 'Jazztabueno Productions',
-                artwork: [{ src: img, sizes: '512x512', type: 'image/png' }, { src: img, sizes: '1024x1024', type: 'image/png' }]
+                artwork: [{ src: img, sizes: '512x512', type: 'image/png' }]
             });
-            navigator.mediaSession.playbackState = media.paused ? 'paused' : 'playing';
         }
     }
 
@@ -182,7 +185,7 @@
             document.getElementById('p-title').innerText = titulo;
             document.getElementById('p-vinyl').style.backgroundImage = `url('${img || 'logo.png'}')`;
             document.getElementById('global-player').style.display = 'block';
-            syncMetadata(titulo, prog, img || 'logo.png');
+            pushMetadata(titulo, prog, img || 'logo.png');
             media.play();
         }
         render();
@@ -190,33 +193,34 @@
 
     window.togglePlay = () => { if (media.paused) media.play(); else media.pause(); render(); };
     
-    // --- FUNCIÓN DE TRANSMISIÓN SIN RETRASOS V11.3 ---
-    window.activarCastV113 = () => { 
+    // --- NUEVO MOTOR DE TRANSMISIÓN FINAL V11.4 ---
+    window.activarCastFinal = () => { 
+        // Primero intentamos el prompt nativo
         if(media.remotePlayback) {
-            // Llamada directa para evitar bloqueos de Chrome
-            media.remotePlayback.prompt().catch(() => {
-                alert("📡 Director: Toca los 3 puntos de la barra de Chrome y selecciona 'Transmitir'.");
+            media.remotePlayback.prompt().then(() => {
+                castBtn.classList.add('is-casting');
+            }).catch(() => {
+                // Si Chrome bloquea, hacemos aparecer el reproductor nativo gris
+                media.style.display = (media.style.display === 'block') ? 'none' : 'block';
+                alert("📡 Toca los 3 Puntos del reproductor gris que apareció y selecciona 'Transmitir'.");
             });
-        } else {
-            alert("📡 Tu navegador no soporta la transmisión directa. Usa 'Emitir Pantalla' desde tu menú de Android.");
         }
     };
 
-    window.refreshVisuals = () => {
+    window.forzarArte = () => {
         if(idActual) {
             const p = programas.find(x => x.id === idActual);
-            if(p) syncMetadata(p.titulo, p.programa, p.imagenUrl);
-            alert("📡 Re-enviando carátula a la TV.");
+            if(p) pushMetadata(p.titulo, p.programa, p.imagenUrl);
+            alert("📡 Refrescando carátula en TV...");
         }
     };
 
     window.resetUI = () => {
         castBtn.classList.remove('is-casting');
         media.pause(); media.src = ""; render();
-        alert("♻️ Interfaz Limpia.");
+        alert("♻️ Icono Limpio.");
     };
 
-    // SENSOR REAL DE CONEXIÓN
     setInterval(() => {
         if (media.remotePlayback && media.remotePlayback.state === 'connected') {
             castBtn.classList.add('is-casting');
@@ -225,7 +229,7 @@
             castBtn.classList.remove('is-casting');
             castBtn.innerText = "📡 TRANSMITIR TV";
         }
-    }, 2000);
+    }, 2500);
 
     window.filtrar = (cat, el) => {
         filtroActivo = cat;
@@ -234,7 +238,7 @@
         render();
     };
 
-    window.resetTotal = () => { localStorage.clear(); location.reload(); };
+    window.resetApp = () => { localStorage.clear(); location.reload(); };
     media.onloadedmetadata = () => { seekBar.max = Math.floor(media.duration); };
     media.onplay = () => { document.getElementById('global-player').classList.add('playing'); document.getElementById('p-play-btn').innerText = '||'; render(); };
     media.onpause = () => { document.getElementById('global-player').classList.remove('playing'); document.getElementById('p-play-btn').innerText = '▶'; render(); };
